HelloUltraviolet/Fixtures/RejectedSource/Procedures/ExplicitReturnDefinition/Expected.uv
//! Expected diagnostic metadata for the ExplicitReturnDefinition rejected-source specimen.

expectedDiagnostic("E-TYP-1507", "def.15.ExplicitReturn")
